# clawcraft

./: .gitignore  CLAUDE.md  PLAYER.md  SKILL.md  pyproject.toml  requirements.txt
clawcraft/cli/: clawcraft.py
clawcraft/server/: game.py  main.py  persistence.py  world.py
