[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawcraft"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
clawcraft = "clawcraft.cli.clawcraft:cli"
clawcraft-server = "clawcraft.server.main:run"
